code corrections; removed .theia; added test doc

--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
 							<a class="dropdown-item" href="index.html#prt">Why K9Zen?</a>
                             <hr />
 							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html#location">Where we train</a>
-							<a class="dropdown-item" href="training.html#timetable">Class timetable</a>
+							<a class="dropdown-item" href="training.html#where">Where we train</a>
+							<a class="dropdown-item" href="training.html#when">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item">
@@ -49,63 +49,63 @@
 	</header>
 	<main>
 		<div class="container-fluid about-container">
-			<section class="container">
-				<div class="row justify-content-center about-us frame--main">
+			<section class="container frame--main">
+				<div class="row justify-content-center about-us">
 					<div class="col-12 about-heading">
 						<h2>Our instructors</h2>
 					</div>
 					<div class="row justify-content-center frame--info about-jane">
-						<div class="col-md-6 jane-image">
+						<div class="col-lg-6 jane-image">
 							<img src="assets/img/jane.jpg" alt="Jane photo" title="Jane"/>
 					    </div>
-							<div class="col-md-6 jane-text">
-								<h4>Jane Smith</h4>
+					    <div class="col-lg-6 jane-text">
+							<h4>Jane Smith</h4>
+							<p>
+								After graduating from vet school, Jane specialised in dogs and dog behaviour.
+								While
+								she still works part-time in a vet clinic, she has dedicated most of her time to dog
+								training, observation and owner counselling. Jane also occasionally acts as an
+								expert consultant on dog-related incidents. Her education on dog
+								training includes international seminars <em>"New approaches
+								to dog obedience training"</em> (Munich, 2009) and <em>"Insights into canine psychology -
+								21st-century update"</em> (Montreal, 2011) as well as the international conference
+								<em>"Impact of training atmosphere
+								on dog-owner relationship"</em> (Sydney, 2014).<br /><br />
+                                Jane is a proud owner of a lab named Skip and a mixed-breed called Bella.
 								<p>
-									After graduating from vet school, Jane specialised in dogs and dog behaviour.
-									While
-									she still works part-time in a vet clinic, she has dedicated most of her time to dog
-									training, observation and owner counselling. Jane also occasionally acts as an
-									expert consultant on dog-related incidents. Her education on dog
-									training includes international seminars <em>"New approaches
-									to dog obedience training"</em> (Munich, 2009) and <em>"Insights into canine psychology -
-									21st-century update"</em> (Montreal, 2011) as well as the international conference
-									<em>"Impact of training atmosphere
-									on dog-owner relationship"</em> (Sydney, 2014).<br /><br />
-                                    Jane is a proud owner of a lab named Skip and a mixed-breed called Bella.
-									<p>
-							</div>
 						</div>
-						<div class="row justify-content-center frame--info about-john">
-							<div class="col-md-6 john-text">
-								<h4>John Smith</h4>
-								<p>
-									A computer engineer by profession, John was introduced into the wonderful dog world
-									by his father, a Ridgeback breeder. From his early days with the dogs, John realised
-									that there is more to getting a dog to obey and follow him than just using
-									discipline and force. Having left his office job for a
-									freelance developer career in 2010, John began exploring the emerging positive approaches to dog
-									training and became acquainted with the Positive Reinforcement Training method. He earned his
-									PRT Trainer Certificate in 2013 and has since attended numerous seminars and
-									workshops about the method, including the <em>"Relaxed dog - Happy dog"</em>
-									international workshop in Vienna in 2017.<br /> <br />
-                                    John's best quadruped friend is a Border Collie named Sparky,
-								</p>
-							</div>
-							<div class="col-md-6 john-image">
-								<img src="assets/img/john.jpg" alt="John photo" title="John"/>
+					</div>
+					<div class="row justify-content-center frame--info about-john">
+						<div class="col-lg-6 john-text">
+							<h4>John Smith</h4>
+							<p>
+								A computer engineer by profession, John was introduced into the wonderful dog world
+								by his father, a Ridgeback breeder. From his early days with the dogs, John realised
+								that there is more to getting a dog to obey and follow him than just using
+								discipline and force. Having left his office job for a
+								freelance developer career in 2010, John began exploring the emerging positive approaches to dog
+								training and became acquainted with the Positive Reinforcement Training method. He earned his
+								PRT Trainer Certificate in 2013 and has since attended numerous seminars and
+								workshops about the method, including the <em>"Relaxed dog - Happy dog"</em>
+								international workshop in Vienna in 2017.<br /> <br />
+                                  John's best quadruped friend is a Border Collie named Sparky,
+							</p>
+						</div>
+					    <div class="col-lg-6 john-image">
+						    <img src="assets/img/john.jpg" alt="John photo" title="John"/>
 					    </div>
-							</div>
-							<div class="row justify-content-center frame--info learn-more">
-								<div class="col-10">
-									<p>
-										Would you like to know more about our instructors or about Positive
-										Reinforcement
-										Training? <br />Please do not hesitate to
-										<span><a class="inline--anchor" href="contact.html">contact us</a></span>.
-									</p>
-								</div>
-							</div>
-						</div>
+				    </div>
+				    <div class="row justify-content-center frame--info learn-more">
+					    <div class="col-10">
+						    <p>
+							    Would you like to know more about our instructors or about Positive
+							    Reinforcement
+							    Training? <br />Please do not hesitate to
+							    <span><a class="inline--anchor" href="contact.html"> contact us</a></span>.
+							</p>
+					    </div>   
+					</div>
+				</div>
 			</section>
 		</div>
 	</main>
