--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
 							<a class="dropdown-item" href="index.html#prt">Why K9Zen?</a>
                             <hr />
 							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html#location">Where we train</a>
-							<a class="dropdown-item" href="training.html#timetable">Class timetable</a>
+							<a class="dropdown-item" href="training.html#where">Where we train</a>
+							<a class="dropdown-item" href="training.html#when">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item active">
@@ -49,8 +49,8 @@
 	</header>
 	<main>
 		<div class="container-fluid contact-container">
-			<div class="container">
-				<section class="row justify-content-center frame--main contact-options">
+			<section class="container">
+				<div class="row justify-content-center frame--main contact-options">
 					<div class="col-12 contact-header">
 						<h2>Contact us</h2>
 					</div>
@@ -90,8 +90,8 @@
 							</div>
 						</div>
 					</div>
-				</section>
-			</div>
+				</div>
+			</section>
 		</div>
 	</main>
 
