--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 							<a class="dropdown-item" href="#prt">Why K9Zen?</a>
                             <hr />
 							<a class="dropdown-item" href="training.html">What we offer</a>
-							<a class="dropdown-item" href="training.html#location">Where we train</a>
-							<a class="dropdown-item" href="training.html#timetable">Class timetable</a>
+							<a class="dropdown-item" href="training.html#where">Where we train</a>
+							<a class="dropdown-item" href="training.html#when">Class timetable</a>
 						</div>
 					</li>
 					<li class="nav-item">
