code fixes; expanded README and test doc

--- a/training.html
+++ b/training.html
@@ -86,20 +86,20 @@
 						<div class="row justify-content-center trg-more-info">
 							<div class="col-11">
 								<p class="frame--info">
-									Please check our <a class="inline--anchor" href="#location">location</a> and <a
-										class="inline--anchor" href="#timetable">timetable</a> sections for
+									Please check our <a class="inline--anchor" href="#where">location</a> and <a
+										class="inline--anchor" href="#when">timetable</a> sections for
 									details about our classes. For detailed
 									information about individual training or consultation, as well as for any other
 									question you might have, please do not hesitate to <a class="inline--anchor"
 										href="contact.html">contact
-										us</a>.
+										us</a>.<span id="where">&nbsp;</span>
 								</p>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section>>
-			<section class="container" id="where">
+			</section>
+			<section class="container">
 				<div class="row frame--main location">
 					<div class="col-12 location-header">
 						<h2>Where we train</h2>
