code fixes; deployment info; updated test doc

--- a/training.html
+++ b/training.html
@@ -119,11 +119,11 @@
 					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.9267725687564!2d15.975725015775517!3d45.812724918140326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdd9101e27%3A0xb058b7bb640effe3!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2045%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1575314824458!5m2!1sen!2shr"
-							width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
+							width="600" height="450" style="border:0;" allowfullscreen=""></iframe><span id="when">&nbsp;</span>
 					</div>
 				</div>
 			</section>
-			<section class="container" id="when">
+			<section class="container">
 				<div class="row justify-content-center frame--main timetable">
 					<div class="col-12 timetable-header">
 						<h2>Class Timetable</h2>
