styling fix; link fix; test doc update

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
                     </button>
 				</div>
 				<div class="modal-body custom--modal-body">
-					You can reach us every day (weekends included) <strong>from 10am to 4pm</strong> on the following number: <br />
+					You can reach us <strong>every day (weekends included) from 10am to 4pm</strong> on the following number: <br />
                     <h3 class="phone-number">08 555 1234</h3>
 				</div>
 				<div class="modal-footer">
@@ -128,8 +128,8 @@
 				</div>
 				<div class="modal-body custom--modal-body">
 					You are most welcome to visit us during any of our training classes. Please check our <a
-						class="modal--link inline--anchor" href="training.html#location">training location</a> and <a
-						class="modal--link inline--anchor" href="training.html#timetable">class timetable</a> for details.
+						class="modal--link inline--anchor" href="training.html#where">training location</a> and <a
+						class="modal--link inline--anchor" href="training.html#when">class timetable</a> for details.
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
